# ehrapy-reproducibility

./: .gitignore  .pre-commit-config.yaml  README.md  causal_graph_discovery.ipynb
Figure2/: stratification_fig2.ipynb
Figure_2/: stratification_fig2.ipynb
Figure_3/: Figure3_nb.ipynb
Figure_4/: Figure4_nb.ipynb  Figure4_v2.R  Figure_4_A.R  Figure_4_B_C_liver_survival_analysis.ipynb  liver_survival_analysis.ipynb
Figure_5/: Source.gv  adata_pneumonia_drugcats_added.csv  causal_feature_eng.ipynb  causal_known_graph.ipynb  col_drug_matches.csv  col_drug_matches_verified.csv  columns_per_category.csv  term_counts.csv  term_counts_and_ratios.csv  terms.csv
Supplementary_Figure_1/: sup_fig_1.ipynb
Supplementary_Figure_10/: README.md
Supplementary_Figure_2/: sup_fig_2.ipynb
Supplementary_Figure_3/: Cohort_tracker.ipynb
Supplementary_Figure_5/: distribution_plots.ipynb
Supplementary_Figure_6/: README.md
Supplementary_Figure_9/: pyproject.toml
Supplementary_Figure_9/diabetic_retinopathy/: constants.py
Supplementary_Figure_9/diabetic_retinopathy/cli/: predict_cli.py
Supplementary_Figure_9/diabetic_retinopathy/cli/utils/: cli_utils.py
Supplementary_Figure_9/diabetic_retinopathy/latent_extractors/predictors/models/SpatialSSL/models/: README.md
Supplementary_Figure_9/diabetic_retinopathy/latent_extractors/predictors/models/SpatialSSL/modules/: vit_dino.py
Supplementary_Figure_9/notebooks/latents_extraction/: test_latent_extractors.ipynb
benchmarks/: ehrapy_benchmark.py
cohort_tracker_supplementary/: Cohort_tracker.ipynb
deepflow/: dataset.py  (+3 more)
(+51 files in other folders)
