[tool.poetry]
name = "diabetic_retinopathy"
version = "0.1.0"
description = ""
authors = ["Nastassya Horlava <g.nasta.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^2.0.1"
imbalanced-learn = "^0.10.1"
seaborn = "^0.12.2"
jupyterlab = "^3.6.3"
tensorboard = "^2.12.1"
click = "^8.1.3"
toml = "^0.10.2"
tqdm = "^4.65.0"
urllib3 = "^1.26.15"
transformers = "^4.20.1"
networkx = "^2.8.8"
plotly = "^5.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
